# mnist-pytorch-lightning

./: .gitignore  README.md  guild.yml  pyproject.toml  requirements.txt
mnist_deep_learning_development_example/: data.py  main.py  model.py
