[tool.poetry]
name = "mnist-deep-learning-development-example"
version = "0.1.0"
description = ""
authors = ["Alessandro Wollek <alessandro.wollek@tum.de>"]
readme = "README.md"
packages = [{include = "mnist_deep_learning_development_example"}]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "1.8.3.post1"
kaggle = "^1.5.13"
guildai = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
